--- a/INSTALL
+++ b/INSTALL
@@ -14,8 +14,32 @@ How to run on:
 
 1. LINUX
 
+On Debian-based machines, you can simply run install.sh. Alternatively, you can install everything manually as follows.
+
 To run on linux, make sure that you have installed the following packages:
 
+-python
+
+-python-tk
+
+-python-imaging-tk
+
+To install these packages on a Debian-based distro such as Ubuntu, type the following. This will require an administrative password.
+
+sudo apt-get update
+sudo apt-get install python python-tk python-imaging-tk
+
+The python interpreter is assumed to be installed at /usr/bin/python, which should be the default on most Linux distros.
+
+You can run buildcraft by changing into this directory and running the following command.
+
+./buildcraft
+
+You may have to give it executable permissions:
+
+chmod +x buildcraft
+
+We're working to support full installation in the future.
 
 2. WINDOWS
 
